# lorentz-contract-param

./: .dockerignore  .editorconfig  .gitlab-ci.yml  .hlint-universum.yaml  .hlint.yaml  .stylish-haskell.yaml  .weeder.yaml  Alphanetmorleydockerfile  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Setup.hs  morley.cabal  shell.nix  stack.yaml  test.bats  test.tz
LICENSES/: MIT.txt
app/: Main.hs
contracts/: accounts.tz  add1.tz  add1_list.tz  add_delta_timestamp.tz  add_timestamp_delta.tz  after_strategy.tz  always.tz  and.tz  append.tz  assert.tz  assert_cmpeq.tz  assert_cmpge.tz  assert_cmpgt.tz  assert_cmple.tz  assert_cmplt.tz  assert_cmpneq.tz  assert_eq.tz  assert_ge.tz  assert_gt.tz  assert_le.tz  assert_lt.tz  assert_neq.tz  at_least.tz  auction-buggy.tz  auction.tz  bad_lockup.tz  balance.tz  barOr.mtz  basic1.tz  basic4.tz  basic5.tz  big_map_get_add.tz  big_map_mem.tz  big_map_union.tz  build_list.tz  bytes_literal.tz  cadr_annotation.tz  call_self_several_times.tz  check_signature.tz  compare.tz  (+120 more)
contracts/A1/: counter.mtz
contracts/demo/: counter.mtz  counter.tz  counter_simple.mtz  counter_simple.tz  counter_simple_let.mtz  feather.mtz
contracts/ill-typed/: annotation-mismatch-iter.tz  annotation-mismatch.tz  basic3.tz  concat-lists.tz  concat2-lists.tz  invalid_print.tz  lambda_self1.tz  lambda_self2.tz  lambda_self3.tz  map-nonstrictly-ordered.tz  map-unordered.tz  nopInstr.mtz  nopInstr2.mtz  operation-in-created-contract.tz  operation-in-parameter.tz  operation-in-push.tz  operation-in-storage.tz  set-nonstrictly-ordered.tz  set-unordered.tz  sum-strings.tz  testassert_invalid_print.tz  testassert_invalid_stack1.tz  testassert_invalid_stack2.tz  wrong-final-stack.tz
contracts/notes-in-typed-contracts/: test_typed_annotations.tz  test_typed_annotations.tz.ref
docs/: branching.md  code-style.md  dependencies.md  michelsonExploration.md  michelsonTypes.md  morleyInstructions.md  morleyInterpreter.md  morleyLanguage.md  morleyLanguage2.md  morleyLet.md  morleyProposal.md  morleyRuntime.md  morleySyntaxSugar.md  morleyTesting.md  morleyTypechecker.md  testing-syntax.md  testing.md  testingEDSL.md
examples/EDSL/: CompareSpec.hs  EnvironmentSpec.hs  HelloTezosSpec.hs  README.md  Spec.hs  StringCallerSpec.hs  edsl-demo.cabal  snapshot.yaml  stack.yaml
examples/EDSL/contracts/: compare.tz  environment.tz  failOrStoreAndTransfer.tz  helloTezos.tz  stringCaller.tz
lorentz-contracts/: README.md
lorentz-contracts/src/Lorentz/Contracts/: Auction.hs
lorentz-contracts/src/Lorentz/Contracts/UpgradeableCounter/: V1.hs  V2.hs
lorentz-contracts/src/Lorentz/Contracts/UpgradeableUnsafeLedger/: V1.hs
lorentz-contracts/test/Test/Lorentz/Contracts/: ManagedLedger.hs
lorentzContracts/: Auction.hs
prelude/: Prelude.hs  morley-prelude.cabal
scripts/: lint.sh  morley.sh  test-printer.sh
src/Gas/: Cost.hs  Script.hs  Type.hs
src/Gas/Cost/: CostOf.hs  Typecheck.hs  Unparse.hs
src/Language/Michelson/: Parser.hs  Types.hs
src/Lorentz/: ADT.hs  Arith.hs  Base.hs  Instr.hs  Macro.hs  Prelude.hs  Rebinded.hs  Type.hs  UStore.hs  Value.hs
src/Lorentz/UStore/: Haskell.hs  Instr.hs  Types.hs
src/Michelson/: Analyzer.hs  EqParam.hs  Interpret.hs  Macro.hs  Parser.hs  Printer.hs  Runtime.hs  Test.hs  TypeCheck.hs  Typed.hs  Types.hs  TzPrinter.hs  Untyped.hs
src/Michelson/Interpret/: Pack.hs  Unpack.hs
src/Michelson/Parser/: Annotations.hs
src/Michelson/Printer/: Util.hs
src/Michelson/Test/: Import.hs  Integrational.hs
src/Michelson/TypeCheck/: Ext.hs  Helpers.hs  Instr.hs  TypeCheck.hs  Types.hs  Value.hs
src/Michelson/Typed/: Annotation.hs  Arith.hs  CValue.hs  Convert.hs  DocScan.hs  Extract.hs  Instr.hs  Polymorphic.hs  Scope.hs  Sing.hs  T.hs  Value.hs
src/Michelson/Typed/Haskell/: Value.hs
src/Michelson/Untyped/: Aliases.hs  Annotation.hs  Contract.hs  Ext.hs  Instr.hs  Type.bak  Type.hs  Value.hs
src/Morley/: Aliases.hs  Default.hs  Ext.hs  Lexer.hs  Macro.hs  Parser.hs  Runtime.hs  Test.hs  Types.hs
src/Morley/Parser/: Annotations.hs  Helpers.hs
src/Morley/Runtime/: GState.hs  TxData.hs
src/Morley/Test/: Dummy.hs  Gen.hs  Import.hs  Integrational.hs  Unit.hs  Util.hs
src/Tezos/: Address.hs  Core.hs  Crypto.hs
src/Util/: Columnar.hs  TypeTuple.hs
src/Util/Test/: Arbitrary.hs
test/: Main.hs  Spec.hs  Tree.hs
test/Test/: Arbitrary.hs  CValConversion.hs  Ext.hs  Interpreter.hs  Macro.hs  Parser.hs  Typecheck.hs  ValConversion.hs
test/Test/Interpreter/: Auction.hs  CallSelf.hs  Compare.hs  Conditionals.hs  EnvironmentSpec.hs  StringCaller.hs
test/Test/Interpreter/A1/: Feather.hs
test/Test/Lorentz/Contracts/: Approvals.hs  Auction.hs  ManagedLedger.hs  UnsafeLedger.hs  Walker.hs
test/Test/Lorentz/UStore/: Behaviour.hs
test/Test/Morley/: Runtime.hs
test/Test/Printer/: Michelson.hs
test/Test/Serialization/: Aeson.hs  Michelson.hs
test/Test/Tasty/: HUnit.hs
test/Test/Tezos/: Address.hs  Crypto.hs
test/Test/Util/: Columnar.hs  Contracts.hs  Ingredients.hs  Interpreter.hs  QuickCheck.hs
test/golden/: Contract (Op UNopInstr).json  Contract Op.faulty.json  Contract Op.json  InstrAbstract Op.faulty.json  Op.faulty.json  Op.faulty.reencoded.json
